progs/cpp/9aa07ae7-c118-4bb5-bfd6-eac9af2fb33a/err.txt
progs/cpp/9aa07ae7-c118-4bb5-bfd6-eac9af2fb33a/prog.cpp:6:14: warning: missing terminating " character [enabled by default]
       cout <<";
              ^
progs/cpp/9aa07ae7-c118-4bb5-bfd6-eac9af2fb33a/prog.cpp:6:7: error: missing terminating " character
       cout <<";
       ^
progs/cpp/9aa07ae7-c118-4bb5-bfd6-eac9af2fb33a/prog.cpp: In function ‘int main()’:
progs/cpp/9aa07ae7-c118-4bb5-bfd6-eac9af2fb33a/prog.cpp:7:7: error: expected primary-expression before ‘return’
       return 0;
       ^
progs/cpp/9aa07ae7-c118-4bb5-bfd6-eac9af2fb33a/prog.cpp:7:7: error: expected ‘;’ before ‘return’
